k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  app.kubernetes.io/component: task-service
  app.kubernetes.io/instance: task-service
  app.kubernetes.io/name: task-service
  app.kubernetes.io/part-of: task-manager
  app.openshift.io/runtime: quarkus
  app.openshift.io/runtime-namespace: task-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: quay.io/bgregori/task-service:v3
          ports:
          - containerPort: 8080
