k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task-service
    app.kubernetes.io/component: task-service
    app.kubernetes.io/instance: task-service
    app.kubernetes.io/name: task-service
    app.kubernetes.io/part-of: task-manager
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-namespace: task-manager
  name: task-service-svc
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: task-service
