k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: task-service
    app.kubernetes.io/component: task-service
    app.kubernetes.io/instance: task-service
    app.kubernetes.io/name: task-service
    app.kubernetes.io/part-of: task-manager
    app.openshift.io/runtime-version: latest
  name: task-service-route
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: task-service-svc
